--- a/src/components/subject/Subject.css
+++ b/src/components/subject/Subject.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
+.c-s-header {
+    padding-top: 8px;
+    padding-bottom: 2px;
+    overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.c-title1 {
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    position: relative;
+    font-size: 16px;
+    color: #333;
+    font-weight: bolder;
+    padding-left: 10px;
+    margin-left: 15px;
+    margin-right: 10px;
+    line-height: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.c-title1:before {
+    content: "";
+    position: absolute;
+    width: 4px;
+    height: 14px;
+    border-radius: 4px;
+    background-color: #fec605;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    left: 0;
 }
