--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,38 +1,110 @@
-.App {
-  text-align: center;
+.p-index {
+  max-width: 640px;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.co-scroll-view {
+  overflow-y: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.p-index section {
+  margin-top: 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.p-index .search-wrap {
+  display: block;
+  position: relative;
+  padding: 10px 15px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.co-search-input {
+  flex-grow: 1;
+  background-color: #f5f6fa;
+  border-radius: 4px;
+  font-size: 12px;
+  height: 34px;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  overflow: hidden;
+}
+
+.p-index .search-wrap:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.co-search-input i {
+  font-weight: 700;
+  font-size: 16px;
+  color: #a5afbd;
+  padding: 10px;
+  width: 1em;
+}
+
+.co-search-input input {
+  flex-grow: 1;
+  background-color: transparent;
+  height: 100%;
+  color: #333;
+  padding: 0;
+}
+
+/** footer */
+.co-footer-nav, .co-footer-nav a {
+  display: flex;
+}
+
+.co-footer-nav {
+  position: fixed;
+  z-index: 100;
+  bottom: 0;
+  max-width: 640px;
+  width: 100%;
+  text-align: center;
+  background-color: #fff;
+  box-shadow: 0 0 14px 0 rgba(52,162,255,.14);
+}
+
+.co-footer-nav a.current {
+  color: #fec605;
+}
+
+.co-footer-nav a {
+  flex: 1;
+  height: 50px;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-size: 10px;
+  color: #bbb;
 }
 
-.App-link {
-  color: #61dafb;
+.co-footer-nav-placeholder {
+  height: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.co-footer-nav a .icon {
+  width: 20px;
+  height: 20px;
+  margin: .2em 0;
+}
+
+.co-footer-nav a .icon-index {
+  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAoCAMAAAC7IEhfAAAAilBMV…SqU19oYQVlvYYSkMZ9dbx0GZ4SRlgyw8QlGXxhXN0VPkl3W0Sn6OdcdiEAAAAASUVORK5CYII=);
+}
+
+.co-footer-nav a .icon-purchased {
+  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACIAAAAoCAMAAACsAtiWAAAAeFBMV…tUEKnaJ4aYlpLSQ/RP1IVf45y7RBaTrqg5S2GUMn4raOkX8raTJJ5XQlMAAAAASUVORK5CYII=);
+}
+
+.co-footer-nav a .item-name {
+  transform: scale(.9);
+  transform-origin: 50% 50%;
 }
