--- a/src/components/subject/Course.css
+++ b/src/components/subject/Course.css
@@ -1,38 +1,121 @@
-.App {
-  text-align: center;
+.c-course-item {
+    position: relative;
+    padding: 15px;
+    line-height: 1.3;
+    transform: scaleX(1);
+    display: flex;
+    align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.c-course-item:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height: 1px;
+    background-color: #eee;
+    transform-origin: 0 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.c-course-item .head {
+    position: relative;
+    flex-shrink: 0;
+    width: 150px;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.c-course-item .head-img:before {
+    content: "";
+    display: block;
+    padding-top: 66.67%;
 }
 
-.App-link {
-  color: #61dafb;
+.c-course-item .head-img img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.c-course-item .info {
+    align-self: stretch;
+    flex-grow: 1;
+    padding: 5px 0 5px 15px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
 }
+
+.c-course-item .course-name, .c-course-item .course-subname {
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 14px;
+    color: #333;
+    font-weight: bolder;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.c-course-item .tag-list {
+    display: flex;
+    white-space: nowrap;
+    overflow: hidden;
+    margin-top: 6px;
+    overflow-x: auto;
+}
+
+.c-course-tag-item {
+    height: 17px;
+    line-height: 17px;
+    font-size: 11px;
+    display: inline-flex;
+    align-items: center;
+    padding: 0 4px;
+    color: #e39a44;
+    background-color: #fef3da;
+    border-radius: 4px;
+    margin-right: 5px;
+    white-space: nowrap;
+}
+
+.c-course-item .flex-grow1 {
+    flex-grow: 1;
+}
+
+.c-course-item .money {
+    margin-top: 4px;
+    font-size: 11px;
+}
+
+.c-course-item .money.padding-right {
+    height: 25px;
+    padding-right: 60px;
+    overflow: hidden;
+    word-break: break-word;
+}
+
+.c-course-item .money .cur {
+    display: inline-block;
+    color: #ff311c;
+    font-size: 18px;
+    white-space: nowrap;
+}
+
+.c-course-item .money .cur i {
+    font-style: normal;
+    font-size: 11px;
+}
+
+.c-course-item .money .origin {
+    display: inline-block;
+    white-space: nowrap;
+    margin-left: .6em;
+    color: #bbb;
+    text-decoration: line-through;
+}
+
