--- a/src/components/Subject/Subject.css
+++ b/src/components/Subject/Subject.css
@@ -6,7 +6,6 @@
 
 .c-title1 {
     -webkit-box-flex: 1;
-    -webkit-flex-grow: 1;
     -ms-flex-positive: 1;
     flex-grow: 1;
     position: relative;
@@ -33,4 +32,9 @@
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
     left: 0;
+}
+
+.c-course-list-style-2 {
+    padding-left: 15px;
+    box-sizing: border-box;
 }
