--- a/src/components/Course/Course.css
+++ b/src/components/Course/Course.css
@@ -152,3 +152,7 @@
 .c-course-list-style-2 .c-course-item .info {
     padding-left: 0;
 }
+
+.c-course-list-style-2 .c-course-item:after {
+    background-color: transparent;
+}
