--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,10 @@ body {
   transform-origin: 50% 50%;
 }
 
+.co-footer-nav-placeholder {
+  height: 50px;
+}
+
 .abs-100 {
   position: absolute;
   top: 0;
